--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,148 +1,113 @@
-# prefixキーをC-tに変更する
+# prefixをC-tに変更する
 set -g prefix C-t
 
-# ステータスバーをトップに配置する
-set-option -g status-position top
+# C-bのキーバインドを解除する
+unbind C-b
 
-# 左右のステータスバーの長さを決定する
-set-option -g status-left-length 90
-set-option -g status-right-length 90
+# キーストロークのディレイを減らす
+set -sg escape-time 1
 
-# #H => マシン名
-# #P => ペイン番号
-# 最左に表示
-set-option -g status-left '#H:[#P]'
+# ウィンドウのインデックスを1から始める
+set -g base-index 1
 
-# Wi-Fi、バッテリー残量、現在時刻
-# 最右に表示
-set-option -g status-right '#(wifi) #(battery --Tmux) [%Y-%m-%d(%a) %H:%M]'
+# ペインのインデックスを1から始める
+setw -g pane-base-index 1
 
-# ステータスバーを Utf-8 に対応
-# 明示的なutf8の設定は不要
-# set-option -g status-utf8 on
+# 設定ファイルをリロードする
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# ステータスバーを1秒毎に描画し直す
+# C-a*2でtmux内のプログラムにC-aを送る
+bind C-a send-prefix
+
+# | でペインを縦に分割する
+bind | split-window -h
+
+# - でペインを横に分割する
+bind - split-window -v
+
+# Vimのキーバインドでペインを移動する
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Vimのキーバインドでペインをリサイズする
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# マウス操作を有効にする
+setw -g mouse on
+
+# 256色端末を使用する
+set -g default-terminal "screen-256color"
+
+# ステータスバーの色を設定する
+set -g status-fg white
+set -g status-bg black
+
+# ウィンドウリストの色を設定する
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,dim,bg=default
+# アクティブなウィンドウを目立たせる
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bright,bg=red
+
+# ペインボーダーの色を設定する
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+#set -g pane-border-style fg=green,bg=black
+## gitの情報とかをペインごとに表示する
+set-option -g pane-border-status bottom
+set-option -g pane-border-format "#[fg=black,bg=blue] #P #(tmux-pane-border '#{pane_current_path}')"
+set-option -g pane-border-fg colour023
+set-option -g pane-active-border-fg blue
+# アクティブなペインを目立たせる
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
+set -g pane-active-border-style fg=white,bg=yellow
+
+# コマンドラインの色を設定する
+#set -g message-fg white
+#set -g message-bg black
+#set -g message-attr bright
+set -g message-style fg=white,bright,bg=black
+
+# ステータスバーを設定する
+## 左パネルを設定する
+set-option -g status-left-length 40
+#set-option -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+### prefixが押されていれば色を反転
+set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #h[#S] #[default]'
+#set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
+## 右パネルを設定する
+set-option -g status-right-length 120 
+#set-option -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M:%S]"
+set-option -g status-right '#(get_load_average_tmux)#(get_volume_tmux)#(get_battery_tmux)#(get_ssid_tmux)#[fg=colour014] [%Y-%m-%d(%a) %H:%M:%S] #[default]'
+## リフレッシュの間隔を設定する(デフォルト 15秒)
 set-option -g status-interval 1
-
-# センタライズ（主にウィンドウ番号など）
+## ウィンドウリストの位置を中心寄せにする
 set-option -g status-justify centre
+## ヴィジュアルノーティフィケーションを有効にする
+setw -g monitor-activity on
+set -g visual-activity on
+## ステータスバーを上部に表示する
+set -g status-position top
 
-#### COLOUR (Solarized dark)
-
-# default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
-
-# default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-#set-window-option -g window-status-style dim
-
-# active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-#set-window-option -g window-status-current-style bright
-
-# pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
-
-# message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# clock
-set-window-option -g clock-mode-colour green #green
-
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
-
-# Vi キーバインド
-set-window-option -g mode-keys vi
-
-# Prefix+v でコピーモード開始
-bind-key v copy-mode \; display "Copy mode!"
-#bind-key -T copy-mode-vi v begin-selection
-
-# Prefix+Enter/y でコピー
-bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-To-user-namespace pbcopy"
-bind-key -T copy-mode-vi y     send -X copy-pipe "reattach-To-user-namespace pbcopy"
-
-# Prefix+p でペースト
-# クリップボードにも保存されているので Cmd-v でもペースト可能
-bind-key p paste-buffer
-
-# vim <=> tmux 間でクリップボード利用を可能にする
-set-option -g default-command "reattach-To-user-namespace -l $SHELL"
-
-# Esc キーでコピーの反転を解除（コピーモードは抜けない）
-bind-key -T copy-mode-vi Escape send-keys -X lear-selection
-# Ctrl-c キーでコピーの反転を解除し、コピーモードから抜ける
-bind-key -T copy-mode-vi C-c send-keys -X ancel
-
-# コピーモードの話
-# コピーモード中（Prefix+v 後）C-v で矩形選択開始
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-Toggle
-# 1行選択
-bind-key -T copy-mode-vi V send-keys -X select-line
-
-# Vi モード中に Ctrl-a で行頭に（Emacs ライク）
-bind-key -T copy-mode-vi C-a send-keys -X start-of-line
-# Vi モード中に Ctrl-e で行末に（Emacs ライク）
-bind-key -T copy-mode-vi C-e send-keys -X end-of-line
-
-# 単語の最初の1文字に移動
-bind-key -T copy-mode-vi w send-keys -X next-word
-# 単語の最後の1文字に移動
-bind-key -T copy-mode-vi e send-keys -X next-word-end
-# w の逆の動き back
-bind-key -T copy-mode-vi b send-keys -X previous-word
-
-# 画面上に映る最上行に移動
-bind-key -T copy-mode-vi g send-keys -X top-line
-# 画面上に映る最下行に移動
-bind-key -T copy-mode-vi G send-keys -X bottom-line
-
-# 前方検索
-bind-key -T copy-mode-vi / send-keys -X search-forward
-# 後方検索
-bind-key -T copy-mode-vi ? send-keys -X search-backward
-
-# ページスクロール
-bind-key -T copy-mode-vi C-n send-keys -X page-up
-bind-key -T copy-mode-vi C-f send-keys -X page-down
-# ページ送り
-bind-key -T copy-mode-vi C-u send-keys -X scroll-up
-bind-key -T copy-mode-vi C-d send-keys -X scroll-down
-
-# ウィンドウとペインの番号を1から開始する（デフォルト0）
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-
-# Prefix+- で横に、Prefix+| で縦に分割（ペイン）する
-bind-key | split-window -h
-bind-key - split-window -v
-
-# Prefix + Ctrl-h/l でウィンドウ切り替え
-# Prefix + Ctrl-h,h,h,h,...と連打できる
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
-# Prefix+hjkl でペイン移動
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-# ペインサイズを上下左右（Prefix+JKHL）に変更
-# Prefix+J,J,J,J,...と連打してリサイズ可能
-bind-key -r H resize-pane -L 5
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r L resize-pane -R 5
-
-# Ctrl-o でペインをローテーションしながら移動
-# Prefix を用いないのでタイプが楽だが、Ctrl-o を使用してしまう
-# 他のソフトウェアの設定に支障をきたさないように注意
-bind-key -n C-o select-pane -T :.+
-
+# コピーモードを設定する
+## viのキーバインドを使用する
+setw -g mode-keys vi
+## クリップボード共有を有効にする
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+## コピーモードの操作をvi風に設定する
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
