--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ setw -g window-status-style fg=cyan,dim,bg=default
 #setw -g window-status-current-fg white
 #setw -g window-status-current-bg red
 #setw -g window-status-current-attr bright
-setw -g window-status-current-style fg=white,bright,bg=red
+#setw -g window-status-current-style fg=white,bright,bg=red
 
 # ペインボーダーの色を設定する
 #set -g pane-border-fg green
@@ -66,13 +66,13 @@ setw -g window-status-current-style fg=white,bright,bg=red
 #set -g pane-border-style fg=green,bg=black
 ## gitの情報とかをペインごとに表示する
 set-option -g pane-border-status bottom
-set-option -g pane-border-format "#[fg=black,bg=blue] #P #(tmux-pane-border '#{pane_current_path}')"
-set-option -g pane-border-fg colour023
-set-option -g pane-active-border-fg blue
+set-option -g pane-border-format "#[fg=colour255,bg=colour241] #P #(tmux-pane-border '#{pane_current_path}')"
+set-option -g pane-border-style fg=colour023
+set-option -g pane-active-border-style fg=blue
 # アクティブなペインを目立たせる
 #set -g pane-active-border-fg white
 #set -g pane-active-border-bg yellow
-set -g pane-active-border-style fg=white,bg=yellow
+#set -g pane-active-border-style fg=white,bg=yellow
 
 # コマンドラインの色を設定する
 #set -g message-fg white
