--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,26 +43,19 @@ bind -r L resize-pane -R 5
 setw -g mouse on
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
 
 # ステータスバーの色を設定する
-set -g status-fg white
+set -g status-fg default 
 set -g status-bg black
 
 # ウィンドウリストの色を設定する
-#setw -g window-status-fg cyan
-#setw -g window-status-bg default
-#setw -g window-status-attr dim
 setw -g window-status-style fg=cyan,dim,bg=default
 # アクティブなウィンドウを目立たせる
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
 #setw -g window-status-current-style fg=white,bright,bg=red
 
 # ペインボーダーの色を設定する
-#set -g pane-border-fg green
-#set -g pane-border-bg black
 #set -g pane-border-style fg=green,bg=black
 ## gitの情報とかをペインごとに表示する
 set-option -g pane-border-status bottom
@@ -70,14 +63,9 @@ set-option -g pane-border-format "#[fg=colour255,bg=colour241] #P #(tmux-pane-bo
 set-option -g pane-border-style fg=colour023
 set-option -g pane-active-border-style fg=blue
 # アクティブなペインを目立たせる
-#set -g pane-active-border-fg white
-#set -g pane-active-border-bg yellow
 #set -g pane-active-border-style fg=white,bg=yellow
 
 # コマンドラインの色を設定する
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
 set -g message-style fg=white,bright,bg=black
 
 # ステータスバーを設定する
@@ -85,7 +73,7 @@ set -g message-style fg=white,bright,bg=black
 set-option -g status-left-length 40
 #set-option -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 ### prefixが押されていれば色を反転
-set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #h[#S] #[default]'
+set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H:[#P] #[default]'
 #set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
 ## 右パネルを設定する
 set-option -g status-right-length 120 
@@ -107,7 +95,17 @@ setw -g mode-keys vi
 ## クリップボード共有を有効にする
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
+# 'v'で選択を始める
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+# 'V' で行選択
+bind -T copy-mode-vi V send -X select-line
+# 'C-v' で矩形選択
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+# 'y'でヤンク
 bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# 'Y' で行ヤンク
+bind -T copy-mode-vi Y send -X copy-line
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# 'C-p'でペースト
+bind-key C-p paste-buffer
