--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,21 +77,21 @@ set -g status-position top
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-setw -g mode-keys vi
+#setw -g mode-keys vi
 ## クリップボード共有を有効にする
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
 # 'v'で選択を始める
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
 # 'V' で行選択
-bind -T copy-mode-vi V send -X select-line
+#bind -T copy-mode-vi V send -X select-line
 # 'C-v' で矩形選択
-bind -T copy-mode-vi C-v send -X rectangle-toggle
+#bind -T copy-mode-vi C-v send -X rectangle-toggle
 # 'y'でヤンク
-bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # 'Y' で行ヤンク
-bind -T copy-mode-vi Y send -X copy-line
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind -T copy-mode-vi Y send -X copy-line
+#unbind -T copy-mode-vi Enter
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # 'C-p'でペースト
-bind-key C-p paste-buffer
+#bind-key C-p paste-buffer
