.tmux.conf: keybind for clipbord

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
-# prefixをC-tに変更する
-set -g prefix C-t
-# C-bのキーバインドを解除する
-unbind C-b
+# Prefix(Ctrl-b)をCtrl-jに変更する
+unbind-key C-b
+set-option -g prefix C-t
+bind-key C-t send-prefix
 # キーストロークのディレイを減らす
 set -sg escape-time 1
 # ウィンドウのインデックスを1から始める
@@ -29,10 +29,10 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 # マウス操作を有効にする
-setw -g mouse on
+set-option -g mouse on
 # 256色端末を使用する
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+# set-option -g default-terminal screen-256color
+# set -g terminal-overrides 'xterm:colors=256'
 # ステータスバーの色を設定する
 set -g status-fg default 
 set -g status-bg black
@@ -101,4 +101,4 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-if "which pbpaste" "bind-key ] run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
+if "which pbpaste" "bind-key p run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
