--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ bind -r L resize-pane -R 5
 # マウス操作を有効にする
 set-option -g mouse on
 # 256色端末を使用する
-# set-option -g default-terminal screen-256color
+set-option -g default-terminal screen-256color
 # set -g terminal-overrides 'xterm:colors=256'
 # ステータスバーの色を設定する
 set -g status-fg default 
@@ -74,6 +74,8 @@ setw -g monitor-activity on
 set -g visual-activity on
 ## ステータスバーを上部に表示する
 set -g status-position top
+# ステータスバーの表示と非表示
+bind-key @ set-option status
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
