--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -44,7 +44,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 15.0
+  size: 15.
 
   offset:
     x: 0
@@ -86,4 +86,4 @@ key_bindings:
 #   - { key: Add, mods: Control, action: IncreaseFontSize }
 #   - { key: Subtract, mods: Control, action: DecreaseFontSize }
 #   - { key: Minus, mods: Control, action: DecreaseFontSize }
-  - { key: N, mods: Control, action: SpawnNewInstance }
+  - { key: N, mods: Control|Shift, action: SpawnNewInstance }
