--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     args: [--allow-missing-credentials]
   - id: detect-private-key
   - id: end-of-file-fixer
-  - id: no-commit-to-branch   # to protect specific branches from direct checkins.
-    args: [--branch, master, --branch, main]
+  # - id: no-commit-to-branch   # to protect specific branches from direct checkins.
+  #   args: [--branch, master, --branch, main]
   - id: pretty-format-json
     args: [--autofix]
