--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,4 +103,4 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
-if "which pbpaste" "bind-key p run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
+# if "which pbpaste" "bind-key p run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
