--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [user]
 	name = Yusuke Uchida
 	email = fantomyuu0623@gmail.com
+[init]
+  templatedir = ~/.git_templates
 [core]
 [color]
 	ui = auto
