--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,8 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+# num of history
+set-option -g history-limit 10000
 # マウス操作を有効にする
 set-option -g mouse on
 # 256色端末を使用する
