.tmux.conf: Japanese -> English

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,69 +1,63 @@
-# Prefix(Ctrl-b)をCtrl-jに変更する
+# Prefix, C-b -> C-t
 unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
-# キーストロークのディレイを減らす
 set -sg escape-time 1
-# ウィンドウのインデックスを1から始める
+# Start index from 1
 set -g base-index 1
-# ペインのインデックスを1から始める
 setw -g pane-base-index 1
-# 設定ファイルをリロードする
+# Reload config file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-# C-a*2でtmux内のプログラムにC-aを送る
+# C-a*2, send C-a to program in tmux
 bind C-a send-prefix
-# | でペインを縦に分割する
+# How to split Pane
 bind | split-window -h
-# - でペインを横に分割する
 bind - split-window -v
-# Vimのキーバインドでペインを移動する
+# Vim-like bindings to move pane
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
-# Vimのキーバインドでペインをリサイズする
+# Vim-like bindings to resize pane
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-# num of history
+# Limit of history
 set-option -g history-limit 10000
-# マウス操作を有効にする
+# Enable Mouse
 set-option -g mouse on
-# 256色端末を使用する
+# 256color
 set-option -g default-terminal screen-256color
 # set -g terminal-overrides 'xterm:colors=256'
-# ステータスバーの色を設定する
+# Color of Starus Line
 set -g status-fg default 
 set -g status-bg black
-# ウィンドウリストの色を設定する
+# Color of Window list
 setw -g window-status-style fg=cyan,dim,bg=default
-# アクティブなウィンドウを目立たせる
+# Highlight active pane
 #setw -g window-status-current-style fg=white,bright,bg=red
 
-# ペインボーダーの色を設定する
-#set -g pane-border-style fg=green,bg=black
-## gitの情報とかをペインごとに表示する
+# Color of pane border
+# set -g pane-border-style fg=green,bg=black
+# Show git (and other) info in each panes
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#[fg=colour255,bg=colour241] #P #(tmux-pane-border '#{pane_current_path}')"
 set-option -g pane-border-style fg=colour023
 set-option -g pane-active-border-style fg=blue
-# アクティブなペインを目立たせる
-#set -g pane-active-border-style fg=white,bg=yellow
-
-# コマンドラインの色を設定する
+# Color of Command Line
 set -g message-style fg=white,bright,bg=black
 
-# ステータスバーを設定する
-## 左パネルを設定する
+# Status Bar
+# Left Panel
 set-option -g status-left-length 40
-#set-option -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-### prefixが押されていれば色を反転
+# set-option -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+# Reverse color if prefix is active
 set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H:[#P] #[default]'
-#set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
-## 右パネルを設定する
+# set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
+# Right Panel
 set-option -g status-right-length 120 
 #set-option -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M:%S]"
 set-option -g status-right '#(get_load_average_tmux)#(get_volume_tmux)#(get_battery_tmux)#(get_ssid_tmux)#[fg=colour014] [%Y-%m-%d(%a) %H:%M:%S] #[default]'
