--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,50 +51,24 @@ set-option -g pane-active-border-style fg=blue
 set -g message-style fg=white,bright,bg=black
 
 # Status Bar
-# Left Panel
+# Left Panel. Reverse color if prefix is active
 set-option -g status-left-length 40
 # set-option -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-# Reverse color if prefix is active
-set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H:[#P] #[default]'
-# set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
+# set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H:[#P] #[default]'
+set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
 # Right Panel
 set-option -g status-right-length 120 
-#set-option -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M:%S]"
+# set-option -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M:%S]"
 set-option -g status-right '#(get_load_average_tmux)#(get_volume_tmux)#(get_battery_tmux)#(get_ssid_tmux)#[fg=colour014] [%Y-%m-%d(%a) %H:%M:%S] #[default]'
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set-option -g status-interval 1
-## ウィンドウリストの位置を中心寄せにする
-set-option -g status-justify centre
-## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
-## ステータスバーを上部に表示する
-set -g status-position top
-# ステータスバーの表示と非表示
-bind-key @ set-option status
+# Other settings
+set-option -g status-interval 1      # Interval
+set-option -g status-justify centre  # Centerize
+setw -g monitor-activity on          # Monitor activity
+set -g visual-activity on            # Visual activity
+set -g status-position top           # Status bar on top
+bind-key @ set-option status         # Hide/Show status bar
 
-# コピーモードを設定する
-## viのキーバインドを使用する
-#setw -g mode-keys vi
-## クリップボード共有を有効にする
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-## コピーモードの操作をvi風に設定する
-# 'v'で選択を始める
-#bind-key -T copy-mode-vi v send-keys -X begin-selection
-# 'V' で行選択
-#bind -T copy-mode-vi V send -X select-line
-# 'C-v' で矩形選択
-#bind -T copy-mode-vi C-v send -X rectangle-toggle
-# 'y'でヤンク
-#bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# 'Y' で行ヤンク
-#bind -T copy-mode-vi Y send -X copy-line
-#unbind -T copy-mode-vi Enter
-#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# 'C-p'でペースト
-#bind-key C-p paste-buffer
 set-window-option -g mode-keys vi
-
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
