.tmux.conf: changed status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,7 +65,7 @@ set-option -g status-interval 1      # Interval
 set-option -g status-justify centre  # Centerize
 setw -g monitor-activity on          # Monitor activity
 set -g visual-activity on            # Visual activity
-set -g status-position top           # Status bar on top
+set -g status-position bottom           # Status bar on top
 bind-key @ set-option status         # Hide/Show status bar
 
 set-window-option -g mode-keys vi
@@ -74,3 +74,5 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 # if "which pbpaste" "bind-key p run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
+
+if-shell "test -f ~/.tmux.theme.conf" "source ~/.tmux.theme.conf"
