--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,7 +65,7 @@ set-option -g status-interval 1      # Interval
 set-option -g status-justify centre  # Centerize
 setw -g monitor-activity on          # Monitor activity
 set -g visual-activity on            # Visual activity
-set -g status-position bottom           # Status bar on top
+set -g status-position top           # Status bar on top
 bind-key @ set-option status         # Hide/Show status bar
 
 set-window-option -g mode-keys vi
