--- a/.tmux.theme.conf
+++ b/.tmux.theme.conf
@@ -15,7 +15,7 @@ set -g status-left-length "100"
 setw -g window-status-activity-style "underscore,fg=#61AFEF,bg=#282C34"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#61AFEF,bg=#282C34"
-set -g status-left "#[fg=#282C34,bg=#61AFEF] %Y-%m-%d(%a) %H:%M:%S #[fg=#61AFEF,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] #S #[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=#282C34,bg=#61AFEF]#{?client_prefix,#[reverse],} %Y-%m-%d(%a) %H:%M:%S #[fg=#61AFEF,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] #S #[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=#282C34,bg=#282C34,nobold,nounderscore,noitalics]#[fg=#61AFEF,bg=#282C34] #(get_ssid_tmux) #[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] #(get_load_average_tmux)  #(get_volume_tmux) #[fg=#61AFEF,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#282C34,bg=#61AFEF] #(get_battery_tmux) "
 setw -g window-status-format "#[fg=#282C34,bg=#282C34,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#282C34,bg=#282C34,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#282C34,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] #I  #W  #F #[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]"
