--- a/pre-commit/.pre-commit-config.yaml
+++ b/pre-commit/.pre-commit-config.yaml
@@ -12,7 +12,11 @@ repos:
     args: [--allow-missing-credentials]
   - id: detect-private-key
   - id: end-of-file-fixer
+  - id: fix-byte-order-marker
+  - id: mixed-line-ending
   # - id: no-commit-to-branch   # to protect specific branches from direct checkins.
   #   args: [--branch, master, --branch, main]
   - id: pretty-format-json
     args: [--autofix]
+  - id: trailing-whitespace
+    args: [--markdown-linebreak-ext=md]
