alacritty.yml: changed fonts settings

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -31,16 +31,16 @@ background_opacity: 0.90
 
 font:
   normal:
-    family: "Hack Nerd Font"
+    family: "Hack"
     style: Regular
   bold:
-    family: "Hack Nerd Font"
+    family: "Hack"
     style: Bold
   italic:
-    family: "Hack Nerd Font"
+    family: "Hack"
     style: Regular Italic
   bold_italic:
-    family: "Hack Nerd Font"
+    family: "Hack"
     style: Bold Italic
 
   # Point size
