--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -81,10 +81,8 @@ live_config_reload: true
 key_bindings:
   #   - { key: V, mods: Control|Shift, action: Paste }
   #   - { key: C, mods: Control|Shift, action: Copy }
-  #   - { key: Key0, mods: Control, action: ResetFontSize }
-  #   - { key: Equals, mods: Control, action: IncreaseFontSize }
-  #   - { key: Add, mods: Control, action: IncreaseFontSize }
-  #   - { key: Subtract, mods: Control, action: DecreaseFontSize }
-  #   - { key: Minus, mods: Control, action: DecreaseFontSize }
   - { key: N, mods: Control|Shift, action: SpawnNewInstance }
   - { key: F11, action: ToggleFullscreen }
+  - { key: Semicolon, mods: Control, action: IncreaseFontSize }
+  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
+  - { key: Key0, mods: Control, action: ResetFontSize }
