--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -44,7 +44,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 15.
+  size: 14.
 
   offset:
     x: 0
@@ -57,8 +57,10 @@ window:
   padding:
     x: 1
     y: 1
-  decolations: transparent # mac only
-  startup_mode: SimpleFullscreen # mac only
+  decolations: none
+  startup_mode: Maximized
+  # decolations: transparent # mac only
+  # startup_mode: SimpleFullscreen # mac only
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -79,8 +81,8 @@ selection:
 live_config_reload: true
 
 key_bindings:
-  #   - { key: V, mods: Control|Shift, action: Paste }
-  #   - { key: C, mods: Control|Shift, action: Copy }
+  - { key: V, mods: Control|Shift, action: Paste }
+  - { key: C, mods: Control|Shift, action: Copy }
   - { key: N, mods: Control|Shift, action: SpawnNewInstance }
   - { key: F11, action: ToggleFullscreen }
   - { key: Semicolon, mods: Control, action: IncreaseFontSize }
