alacritty.yml: font-size related bindings

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -86,6 +86,6 @@ key_bindings:
   - { key: N, mods: Control|Shift, action: SpawnNewInstance }
   - { key: F10, action: ToggleSimpleFullscreen }
   - { key: F11, action: ToggleFullscreen }
-  - { key: Semicolon, mods: Control, action: IncreaseFontSize }
-  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
+  - { key: Comma, mods: Control, action: DecreaseFontSize }
+  - { key: Period, mods: Control, action: IncreaseFontSize }
   - { key: Key0, mods: Control, action: ResetFontSize }
