--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,42 +31,15 @@ set-option -g history-limit 10000
 set-option -g mouse on
 # 256color
 set-option -g default-terminal screen-256color
-# set -g terminal-overrides 'xterm:colors=256'
-# Color of Starus Line
-set -g status-fg default 
-set -g status-bg black
-# Color of Window list
-setw -g window-status-style fg=cyan,dim,bg=default
-# Highlight active pane
-#setw -g window-status-current-style fg=white,bright,bg=red
 
-# Color of pane border
-# set -g pane-border-style fg=green,bg=black
-# Show git (and other) info in each panes
-set-option -g pane-border-status bottom
-set-option -g pane-border-format "#[fg=colour255,bg=colour241] #P #(tmux-pane-border '#{pane_current_path}')"
-set-option -g pane-border-style fg=colour023
-set-option -g pane-active-border-style fg=blue
-# Color of Command Line
-set -g message-style fg=white,bright,bg=black
-
-# Status Bar
-# Left Panel. Reverse color if prefix is active
-set-option -g status-left-length 40
-# set-option -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-# set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],} #H:[#P] #[default]'
-set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[fg=black]#[bg=yellow],} #h[#S] #[default]'
-# Right Panel
-set-option -g status-right-length 120 
-# set-option -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M:%S]"
-set-option -g status-right '#(get_load_average_tmux)#(get_volume_tmux)#(get_battery_tmux)#(get_ssid_tmux)#[fg=colour014] [%Y-%m-%d(%a) %H:%M:%S] #[default]'
 # Other settings
-set-option -g status-interval 1      # Interval
-set-option -g status-justify centre  # Centerize
-setw -g monitor-activity on          # Monitor activity
-set -g visual-activity on            # Visual activity
-set -g status-position top           # Status bar on top
-bind-key @ set-option status         # Hide/Show status bar
+set-option -g status-interval 1           # Interval
+set-option -g status-justify centre       # Centerize
+setw -g monitor-activity on               # Monitor activity
+set -g visual-activity on                 # Visual activity
+set -g status-position top                # Status bar on top
+bind-key @ set-option status              # Hide/Show status bar
+bind-key b set-option pane-border-status  # Hide/Show pane-border
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
