--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ karabiner/.config/karabiner/*auto*
 **.DS_Store**
 
 **.zcompdump**
+**.zcompcache**
 zsh/.config/zsh/*session*
 **.zsh_history**
 **plugin**
