alacritty.yml: regular italic to italic

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -38,7 +38,7 @@ font:
     style: Bold
   italic:
     family: "Hack"
-    style: Regular Italic
+    style: Italic
   bold_italic:
     family: "Hack"
     style: Bold Italic
