--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -81,6 +81,7 @@ live_config_reload: true
 key_bindings:
   - { key: V, mods: Control|Shift, action: Paste }
   - { key: C, mods: Control|Shift, action: Copy }
+  - { key: L, mods: Control|Shift, action: ClearLogNotice }
   - { key: N, mods: Control|Shift, action: SpawnNewInstance }
   - { key: F10, action: ToggleSimpleFullscreen }
   - { key: F11, action: ToggleFullscreen }
