--- a/tmux/.config/tmux/.tmux.conf
+++ b/tmux/.config/tmux/.tmux.conf
@@ -7,7 +7,7 @@ set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 # Reload config file
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/.tmux.conf \; display "Reloaded!"
 # C-a*2, send C-a to program in tmux
 bind C-a send-prefix
 # How to split Pane
@@ -48,4 +48,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 # if "which pbpaste" "bind-key p run 'tmux set-buffer -- \"$(pbpaste)\"; tmux paste-buffer'"
 
-if-shell "test -f ~/.tmux.theme.conf" "source ~/.tmux.theme.conf"
+if-shell "test -f ~/.config/tmux/.tmux.theme.conf" "source ~/.config/tmux/.tmux.theme.conf"
