--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,3 @@
-if-shell "test -f ~/.config/tmux/tmux.conf" "source ~/.config/tmux/tmux.conf"
+if-shell "test -f ~/.config/tmux/tmux.general.conf" "source ~/.config/tmux/tmux.general.conf"
+if-shell "test -f ~/.config/tmux/tmux.keybind.conf" "source ~/.config/tmux/tmux.keybind.conf"
 if-shell "test -f ~/.config/tmux/tmux.theme.conf" "source ~/.config/tmux/tmux.theme.conf"
