general,theme: moved status line config

--- a/tmux/.config/tmux/tmux.theme.conf
+++ b/tmux/.config/tmux/tmux.theme.conf
@@ -1,6 +1,13 @@
 # This tmux statusbar config was created by tmuxline.vim
 # on 日, 04  4 2021
 
+# status line
+set-option -g status-interval 1           # Interval
+set-option -g status-justify centre       # Centerize
+setw -g monitor-activity on               # Monitor activity
+set -g visual-activity on                 # Visual activity
+set -g status-position top                # Status bar on top
+
 set -g status-justify "centre"
 set -g status "on"
 set -g status-left-style "none"
