--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 source-file ~/.config/tmux/tmux.general.conf
 source-file ~/.config/tmux/tmux.keybind.conf
 source-file ~/.config/tmux/tmux.theme.conf
+source-file ~/.config/tmux/tmux.dracula.conf
 source-file ~/.config/tmux/tmux.plugins.conf
