tmux.dracula.conf: configured dracula

--- a/tmux/.config/tmux/tmux.dracula.conf
+++ b/tmux/.config/tmux/tmux.dracula.conf
@@ -1,1 +1,4 @@
 set -g @dracula-show-fahrenheit false
+set -g @dracula-plugins "battery network weather cpu-usage ram-usage time"
+set -g @dracula-show-powerline true
+set -g status-position top
