tmux.dracula.conf: disabled timezone military-time

--- a/tmux/.config/tmux/tmux.dracula.conf
+++ b/tmux/.config/tmux/tmux.dracula.conf
@@ -1,4 +1,5 @@
 set -g @dracula-show-fahrenheit false
-set -g @dracula-plugins "battery network weather cpu-usage ram-usage time"
-set -g @dracula-show-powerline true
+set -g @dracula-plugins "battery network cpu-usage ram-usage time"
 set -g status-position top
+set -g @dracula-show-timezone false
+set -g @dracula-military-time true
