tmux.keybind.conf: fixed config path

--- a/tmux/.config/tmux/tmux.keybind.conf
+++ b/tmux/.config/tmux/tmux.keybind.conf
@@ -3,7 +3,7 @@ unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
 # Reload config file
-bind r source-file ~/.config/tmux/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 # C-a*2, send C-a to program in tmux
 bind C-a send-prefix
 # How to split Pane
