--- a/tmux/.config/tmux/tmux.dracula.conf
+++ b/tmux/.config/tmux/tmux.dracula.conf
@@ -1,5 +1,5 @@
 set -g @dracula-show-fahrenheit false
-set -g @dracula-plugins "battery network cpu-usage ram-usage time"
-set -g status-position top
+set -g @dracula-plugins "battery network time"
+set -g status-position bottom
 set -g @dracula-show-timezone false
 set -g @dracula-military-time true
