.gitconfig: added another alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,3 +8,4 @@
   ui = auto
 [alias]
   tree = log --graph --pretty=format:'%x09%C(auto) %h %Cgreen %ar %Creset%x09by"%C(cyan ul)%an%Creset" %x09%C(auto)%s %d'
+  ll = log --stat --decorate --find-renames
