tmux.keybind.conf: keybind to move window

--- a/tmux/.config/tmux/tmux.keybind.conf
+++ b/tmux/.config/tmux/tmux.keybind.conf
@@ -9,6 +9,9 @@ bind C-a send-prefix
 # How to split Pane
 bind | split-window -h
 bind - split-window -v
+# Move window
+bind-key -n C-S-Left swap-window -t -1 \; previous-window
+bind-key -n C-S-Right swap-window -t +1 \; next-window
 # Vim-like bindings to move pane
 bind h select-pane -L
 bind j select-pane -D
