tmux.keybind.conf: disabled C-h, C-h binding because it's confusing

--- a/tmux/.config/tmux/tmux.keybind.conf
+++ b/tmux/.config/tmux/tmux.keybind.conf
@@ -17,8 +17,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
 # Vim-like bindings to resize pane
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
