.gitconfig: add funny alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -11,6 +11,7 @@
   tree = log --graph --pretty=format:'%x09%C(auto) %h %Cgreen %ar %Creset%x09by"%C(cyan ul)%an%Creset" %x09%C(auto)%s %d'
   l = log --stat --decorate --find-renames
   big = ! git rev-list --objects --all | git cat-file --batch-check='%(objecttype) %(objectsize:disk) %(rest)' | grep '^blob' | sort --numeric-sort --key=2
+  git = ! git
 [pager]
   diff = delta
 [include]
