--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,9 @@
+include snazzy.conf
+
 font_family      Hack Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 14.0
-background_opacity 0.9
+font_size 16
+background_opacity 1
