alacritty: deleted deprecated option, added comment for kanagawa theme

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,8 +1,7 @@
 import:
   - ~/.config/alacritty/snazzy.yml
   # - ~/.config/alacritty/onedark.yml
-
-background_opacity: 1
+  # - ~/.config/alacritty/kanagawa.yml
 
 font:
   normal:
