tmux.dracula.conf: changed status-possition to top

--- a/tmux/.config/tmux/tmux.dracula.conf
+++ b/tmux/.config/tmux/tmux.dracula.conf
@@ -1,6 +1,6 @@
 set -g @dracula-show-fahrenheit false
 set -g @dracula-plugins "battery network time"
-set -g status-position bottom
+set -g status-position top
 set -g @dracula-refresh-rate 1
 set -g @dracula-arbitrary-time-format true
 set -g @dracula-time-format "%Y-%m-%d(%a) %H:%M:%S"
