--- a/tmux/.config/tmux/tmux.general.conf
+++ b/tmux/.config/tmux/tmux.general.conf
@@ -4,5 +4,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-option -g history-limit 30000
 set-option -g mouse on
-set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ',xterm-256color:Tc'
+# set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ',screen-256color:RGB'
+set-option -ga terminal-overrides ',xterm-256color:RGB'
+set-option -ga terminal-overrides ',alacritty:RGB'
