--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,11 +1,11 @@
-include snazzy.conf
+include ./gruvboxmaterial.conf
 
 font_family      Hack Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 15
+font_size 14
 background_opacity 1
 
 enable_auto_bell no
