--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,7 @@
     email = fantomyuu0623@gmail.com
 [init]
     templatedir = ~/.git_templates
+	defaultBranch = main
 [core]
     editor = nvim
 [color]
