updated tmux setting

--- a/tmux/.config/tmux/tmux.dracula.conf
+++ b/tmux/.config/tmux/tmux.dracula.conf
@@ -3,6 +3,9 @@ set -g @dracula-plugins "battery network time"
 set -g status-position top
 set -g @dracula-refresh-rate 1
 set -g @dracula-arbitrary-time-format true
-set -g @dracula-time-format "%Y-%m-%d(%a) %H:%M:%S"
+set -g @dracula-time-format "%m-%d-%a %H:%M:%S"
+set -g @dracula-show-powerline true
+set -g @dracula-left-icon-padding 0
+set -g @dracula-border-contrast true
 # MESSAGE="display-message -p \"test\"; set-hook -gu session-created;"
 # set-hook -g session-created ${MESSAGE};
