--- a/tmux/.config/tmux/tmux.general.conf
+++ b/tmux/.config/tmux/tmux.general.conf
@@ -8,3 +8,6 @@ set-option -g mouse on
 set-option -ga terminal-overrides ',screen-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',alacritty:RGB'
+# settings for undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
