--- a/tmux/.config/tmux/tmux.plugins.conf
+++ b/tmux/.config/tmux/tmux.plugins.conf
@@ -2,10 +2,11 @@ if-shell "! test -d ~/.config/tmux/plugins/tpm" "run 'git clone https://github.c
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'Morantron/tmux-fingers'
 # set -g @plugin 'dracula/tmux'
-# set -g @plugin 'ucchiee/tmux#feature/time/arbitrary_format'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @plugin 'ucchiee/tmux#feature/time/arbitrary_format'
+# set -g @plugin 'egel/tmux-gruvbox'
+# set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
