--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,3 +11,17 @@ background_opacity 1
 enable_auto_bell no
 
 macos_option_as_alt both
+macos_quit_when_last_window_closed yes
+
+bell_on_tab               yes
+tab_bar_edge              top
+tab_title_template        {index}: {title.split()[0]}
+active_tab_title_template {index}: {title}
+tab_bar_style             fade
+focus_follows_mouse       yes
+active_tab_foreground     #000
+active_tab_background     #73D216
+active_tab_font_style     italic
+inactive_tab_foreground   #444
+inactive_tab_background   #999
+inactive_tab_font_style   normal
