--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,15 +8,12 @@ bold_italic_font auto
 font_size 14
 background_opacity 1
 
-enable_auto_bell no
-
-macos_option_as_alt both
-macos_quit_when_last_window_closed yes
+enable_audio_bell no
 
 bell_on_tab               yes
 tab_bar_edge              top
 tab_title_template        {index}: {title.split()[0]}
-active_tab_title_template {index}: {title}
+# active_tab_title_template {index}: {title}
 tab_bar_style             fade
 focus_follows_mouse       yes
 active_tab_foreground     #000
@@ -25,3 +22,12 @@ active_tab_font_style     italic
 inactive_tab_foreground   #444
 inactive_tab_background   #999
 inactive_tab_font_style   normal
+
+# mapping
+map f1 new_window_with_cwd
+map f2 new_tab_with_cwd
+
+# macos
+macos_option_as_alt both
+macos_quit_when_last_window_closed yes
+macos_traditional_fullscreen no
