--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,6 +10,7 @@ background_opacity 1
 
 enable_audio_bell no
 
+# Tab bar
 bell_on_tab               yes
 tab_bar_edge              top
 tab_title_template        {index}: {title.split()[0]}
@@ -24,8 +25,87 @@ inactive_tab_background   #999
 inactive_tab_font_style   normal
 
 # mapping
-map f1 new_window_with_cwd
-map f2 new_tab_with_cwd
+map f1 new_window_with_cwd !neighbor
+map f2 new_tab_with_cwd !neighbor
+
+# Scrolling
+map ctrl+shift+up        scroll_line_up
+map ctrl+shift+down      scroll_line_down
+map ctrl+shift+k         scroll_line_up
+map ctrl+shift+j         scroll_line_down
+map ctrl+shift+page_up   scroll_page_up
+map ctrl+shift+page_down scroll_page_down
+map ctrl+shift+home      scroll_home
+map ctrl+shift+end       scroll_end
+map ctrl+shift+h         show_scrollback
+
+# Tab
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+map cmd+0 goto_tab 10
+
+## Create and delete tab
+map ctrl+shift+t new_tab_with_cwd !neighbor
+map cmd+t new_tab_with_cwd !neighbor
+map ctrl+shift+q close_tab
+map cmd+w close_tab
+
+## Next/Prev tab
+map ctrl+shift+left previous_tab
+map ctrl+shift+right next_tab
+map shift+cmd+[ previous_tab
+map shift+cmd+] next_tab
+map ctrl+shift+tab previous_tab
+map ctrl+tab next_tab
+map cmd+l next_tab
+map cmd+h previous_tab
+map ctrl+alt+l next_tab
+map ctrl+alt+h previous_tab
+
+## Move tab
+map ctrl+shift+. move_tab_forward
+map ctrl+shift+, move_tab_backward
+
+# Window
+map cmd+r start_resizing_window
+map ctrl+shift+1 first_window
+map ctrl+shift+2 second_window
+map ctrl+shift+3 third_window
+map ctrl+shift+4 fourth_window
+map ctrl+shift+5 fifth_window
+map ctrl+shift+6 sixth_window
+map ctrl+shift+7 seventh_window
+map ctrl+shift+8 eighth_window
+map ctrl+shift+9 ninth_window
+map ctrl+shift+0 tenth_window
+
+## Create and delete window
+map ctrl+shift+n new_os_window_with_cwd
+map cmd+n new_os_window_with_cwd
+map ctrl+shift+enter new_window
+map cmd+enter new_window
+map ctrl+shift+w close_window
+map shift+cmd+d close_window
+
+## Next/Prev window
+map ctrl+shift+[ previous_window
+map ctrl+shift+] next_window
+
+## Move window
+map ctrl+shift+f move_window_forward
+map ctrl+shift+b move_window_backward
+map ctrl+shift+` move_window_to_top
+
+# Layout
+enabled_layouts fat:bias=70;full_size=1;mirrored=false
+map ctrl+shift+l next_layout
 
 # macos
 macos_option_as_alt both
