--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,9 +1,15 @@
 include ./gruvboxmaterial.conf
 
-font_family      Hack Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# font_family      Hack Nerd Font
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
+# Font configuration
+font_family JetBrainsMono Nerd Font Mono Regular
+bold_font JetBrainsMono Nerd Font Mono Bold
+italic_font JetBrainsMono Nerd Font Mono Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
+disable_ligatures never
 
 font_size 14
 background_opacity 1
