kitty.conf: updated

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,6 +20,7 @@ enable_audio_bell no
 bell_on_tab               yes
 tab_bar_edge              top
 tab_title_template        {index}: {title.split()[0]}
+tab_bar_min_tabs 1
 # active_tab_title_template {index}: {title}
 tab_bar_style             fade
 focus_follows_mouse       yes
@@ -93,10 +94,12 @@ map ctrl+shift+9 ninth_window
 map ctrl+shift+0 tenth_window
 
 ## Create and delete window
-map ctrl+shift+n new_os_window_with_cwd
-map cmd+n new_os_window_with_cwd
-map ctrl+shift+enter new_window
-map cmd+enter new_window
+# map ctrl+shift+n new_os_window_with_cwd
+# map cmd+n new_os_window_with_cwd
+map ctrl+shift+n new_os_window
+map cmd+n new_os_window
+map ctrl+shift+enter new_window_with_cwd
+map cmd+enter new_window_with_cwd
 map ctrl+shift+w close_window
 map shift+cmd+d close_window
 
@@ -112,6 +115,10 @@ map ctrl+shift+` move_window_to_top
 # Layout
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+l next_layout
+
+# Copy and Paste
+map cmd+c copy_to_clipboard
+map cmd+v paste_from_clipboard
 
 # macos
 macos_option_as_alt both
