configured ripgrep and fzf

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,3 +44,5 @@
     ~/.hammerspoon:
         if: '[ `uname` = Darwin ]'
         path: hammerspoon
+    ~/.ripgreprc: ripgrep/.ripgreprc
+    ~/.config/bat/config: bat/bat.conf
