kitty: titlebar-only settings

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ enable_audio_bell no
 bell_on_tab               yes
 tab_bar_edge              top
 tab_title_template        {index}: {title.split()[0]}
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 # active_tab_title_template {index}: {title}
 tab_bar_style             fade
 focus_follows_mouse       yes
@@ -124,3 +124,4 @@ map cmd+v paste_from_clipboard
 macos_option_as_alt both
 macos_quit_when_last_window_closed yes
 macos_traditional_fullscreen no
+hide_window_decorations titlebar-only
