--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ ranger/.config/ranger/plugins**
 
 tmux/.config/tmux/plugins/*
 bin/bin/clang*
+
+bin/bin/bin
+bin/bin/lib
+bin/bin/neovim
+bin/bin/share
+
+bin/bin/nvim-macos
+bin/bin/nvim-dev
+bin/bin/nvim08
