kitty.conf: added a binding to create new tab

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -61,6 +61,7 @@ map cmd+0 goto_tab 10
 ## Create and delete tab
 map ctrl+shift+t new_tab_with_cwd !neighbor
 map cmd+t new_tab_with_cwd !neighbor
+map cmd+shift+t new_tab !neighbor
 map ctrl+shift+q close_tab
 map cmd+w close_tab
 
