kitty: changed tab color

--- a/kitty/.config/kitty/gruvboxmaterial.conf
+++ b/kitty/.config/kitty/gruvboxmaterial.conf
@@ -7,12 +7,12 @@ selection_foreground #32302f
 cursor #a89984
 cursor_text_color background
 
-active_tab_background #32302f
-active_tab_foreground #d4be98
-active_tab_font_style bold
-inactive_tab_background #32302f
-inactive_tab_foreground #a89984
-inactive_tab_font_style normal
+# active_tab_background #32302f
+# active_tab_foreground #d4be98
+# active_tab_font_style bold
+# inactive_tab_background #32302f
+# inactive_tab_foreground #a89984
+# inactive_tab_font_style normal
 
 # Black
 color0 #665c54
