--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -12,7 +12,7 @@ bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
 disable_ligatures never
 
 font_size 14
-background_opacity 1
+background_opacity 0.9
 macos_thicken_font 0.75
 
 enable_audio_bell no
@@ -25,12 +25,12 @@ tab_bar_min_tabs 2
 # active_tab_title_template {index}: {title}
 tab_bar_style             fade
 focus_follows_mouse       yes
-active_tab_foreground     #000
-active_tab_background     #73D216
-active_tab_font_style     italic
-inactive_tab_foreground   #444
-inactive_tab_background   #999
-inactive_tab_font_style   normal
+# active_tab_foreground     #000
+# active_tab_background     #73D216
+# active_tab_font_style     italic
+# inactive_tab_foreground   #444
+# inactive_tab_background   #999
+# inactive_tab_font_style   normal
 
 # mapping
 map f1 new_window_with_cwd !neighbor
