--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -32,6 +32,8 @@ focus_follows_mouse       yes
 # inactive_tab_background   #999
 # inactive_tab_font_style   normal
 
+map ctrl+alt+[ kitten kitty_grab/grab.py
+
 # mapping
 map f1 new_window_with_cwd !neighbor
 map f2 new_tab_with_cwd !neighbor
