--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -6,16 +6,16 @@ import:
 
 font:
   normal:
-    family: "Hack Nerd Font"
+    family: "JetBrainsMono Nerd Font Mono"
     style: Regular
   bold:
-    family: "Hack Nerd Font"
+    family: "JetBrainsMono Nerd Font Mono"
     style: Bold
   italic:
-    family: "Hack Nerd Font"
+    family: "JetBrainsMono Nerd Font Mono"
     style: Italic
   bold_italic:
-    family: "Hack Nerd Font"
+    family: "JetBrainsMono Nerd Font Mono"
     style: Bold Italic
 
   # Point size
