alacritty.yml: changed theme

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -2,7 +2,8 @@ import:
   # - ~/.config/alacritty/snazzy.yml
   # - ~/.config/alacritty/onedark.yml
   # - ~/.config/alacritty/kanagawa.yml
-  - ~/.config/alacritty/onenord.yml
+  # - ~/.config/alacritty/onenord.yml
+  - ~/.config/alacritty/gruvbox-material.yml
 
 font:
   normal:
