--- a/alacritty/.config/alacritty/onenord.yml
+++ b/alacritty/.config/alacritty/onenord.yml
@@ -34,9 +34,9 @@ colors:
      foreground: '#EBCB8B'
      background: '#4C566A'
 
-    bar:
-     background: '#434C5E'
-     foreground: '#88C0D0'
+  footer_bar:
+   background: '#434C5E'
+   foreground: '#88C0D0'
 
   hints:
     start:
