--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -127,3 +127,7 @@ macos_option_as_alt both
 macos_quit_when_last_window_closed yes
 macos_traditional_fullscreen no
 hide_window_decorations titlebar-only
+
+# Increase/Decrease opacity (mac os)
+# map ctrl+shift+a>m set_background_opacity +0.1
+# map ctrl+shift+a>l set_background_opacity -0.1
