changed colorscheme to catppuccin

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./gruvboxmaterial.conf
+include ./catppuccin.conf
 
 # font_family      Hack Nerd Font
 # bold_font        auto
@@ -20,10 +20,12 @@ enable_audio_bell no
 # Tab bar
 bell_on_tab               yes
 tab_bar_edge              top
-tab_title_template        {index}: {title.split()[0]}
+# tab_title_template        {index}: {title.split()[0]}
 tab_bar_min_tabs 2
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 # active_tab_title_template {index}: {title}
-tab_bar_style             fade
 focus_follows_mouse       yes
 # active_tab_foreground     #000
 # active_tab_background     #73D216
