feat: hyprland.conf: first config of hyprland

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -61,3 +61,6 @@
     ~/.config/wezterm:
         # if: '[ `uname` = Darwin ]'
         path: wezterm
+    ~/.config/hypr:
+        if: '[ `uname` = Linux ]'
+        path: hypr
