feat: fonts: simplified

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -43,18 +43,9 @@
     ~/.ripgreprc: ripgrep/.ripgreprc
     ~/.config/bat/config: bat/bat.conf  # ref) zsh_export
     ~/.bashrc: bash/bashrc
-    ~/.local/share/fonts/JetBrains Mono Bold Nerd Font Complete Mono.ttf:
+    ~/.local/share/JetBrainsMono:
         if: '[ `uname` = Linux ]'
-        path: ./fonts/JetBrains Mono Bold Nerd Font Complete Mono.ttf
-    ~/.local/share/fonts/JetBrains Mono Italic Nerd Font Complete Mono.ttf:
-        if: '[ `uname` = Linux ]'
-        path: ./fonts/JetBrains Mono Italic Nerd Font Complete Mono.ttf
-    ~/.local/share/fonts/JetBrains Mono Regular Nerd Font Complete Mono.ttf:
-        if: '[ `uname` = Linux ]'
-        path: ./fonts/JetBrains Mono Regular Nerd Font Complete Mono.ttf
-    ~/.local/share/fonts/JetBrains Mono Bold Italic Nerd Font Complete Mono.ttf:
-        if: '[ `uname` = Linux ]'
-        path: ./fonts/JetBrains Mono Bold Italic Nerd Font Complete Mono.ttf
+        path: ./fonts/JetBrainsMono
     ~/.config/sketchybar:
         if: '[ `uname` = Darwin ]'
         path: sketchybar
@@ -64,3 +55,6 @@
     ~/.config/hypr:
         if: '[ `uname` = Linux ]'
         path: hypr
+    ~/.config/sway:
+        if: '[ `uname` = Linux ]'
+        path: sway
